procesador/analisis semantico/y.output
Gramática

    0 $accept: programa $end

    1 programa: lista_sentencias

    2 lista_sentencias: lista_sentencias sentencia PTOCOMA
    3                 | sentencia PTOCOMA

    4 sentencia: sentencia_declar_valor
    5          | sentencia_declar_fun
    6          | sentencia_plot
    7          | error

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT ASIGN expresion

    9 $@1: %empty

   10 $@2: %empty

   11 sentencia_declar_fun: IDENT $@1 PAR_IZQ lista_param PAR_DER DOSPTOS IDENT $@2 ASIGN expresion

   12 sentencia_plot: PLOT lista_ident

   13 expresion: PAR_IZQ expresion PAR_DER
   14          | IF expresion THEN expresion ELSE expresion
   15          | expresion COR_IZQ expresion COR_DER
   16          | llamada_funcion
   17          | OP_MENOS expresion
   18          | OP_NEG expresion
   19          | expresion OP_SUMA expresion
   20          | expresion OP_MENOS expresion
   21          | expresion OP_MULTIP expresion
   22          | expresion OP_IGUAL expresion
   23          | expresion OP_COMP expresion
   24          | expresion OP_OR expresion
   25          | expresion OP_AND expresion
   26          | IDENT
   27          | constante
   28          | error

   29 llamada_funcion: IDENT PAR_IZQ lista_expresiones PAR_DER

   30 lista_expresiones: lista_expresiones COMA expresion
   31                  | expresion

   32 lista_param: lista_param COMA lista_ident DOSPTOS IDENT
   33            | lista_ident DOSPTOS IDENT

   34 lista_ident: lista_ident COMA IDENT
   35            | IDENT

   36 constante: CONST_BOOL
   37          | CONST_ENTERO
   38          | CONST_REAL


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 7 28
PAR_IZQ (258) 11 13 29
PAR_DER (259) 11 13 29
ASIGN (260) 8 11
COMA (261) 30 32 34
PTOCOMA (262) 2 3
DOSPTOS (263) 8 11 32 33
IF (264) 14
THEN (265) 14
ELSE (266) 14
PLOT (267) 12
IDENT (268) 8 11 26 29 32 33 34 35
CONST_ENTERO (269) 37
CONST_BOOL (270) 36
CONST_REAL (271) 38
OP_OR (272) 24
OP_AND (273) 25
OP_IGUAL (274) 22
OP_COMP (275) 23
OP_SUMA (276) 19
OP_MENOS (277) 17 20
OP_MULTIP (278) 21
OP_NEG (279) 18
COR_IZQ (280) 15
COR_DER (281) 15


No terminales con las reglas donde aparecen

$accept (27)
    en la izquierda: 0
programa (28)
    en la izquierda: 1, en la derecha: 0
lista_sentencias (29)
    en la izquierda: 2 3, en la derecha: 1 2
sentencia (30)
    en la izquierda: 4 5 6 7, en la derecha: 2 3
sentencia_declar_valor (31)
    en la izquierda: 8, en la derecha: 4
sentencia_declar_fun (32)
    en la izquierda: 11, en la derecha: 5
$@1 (33)
    en la izquierda: 9, en la derecha: 11
$@2 (34)
    en la izquierda: 10, en la derecha: 11
sentencia_plot (35)
    en la izquierda: 12, en la derecha: 6
expresion (36)
    en la izquierda: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28,
    en la derecha: 8 11 13 14 15 17 18 19 20 21 22 23 24 25 30 31
llamada_funcion (37)
    en la izquierda: 29, en la derecha: 16
lista_expresiones (38)
    en la izquierda: 30 31, en la derecha: 29 30
lista_param (39)
    en la izquierda: 32 33, en la derecha: 11 32
lista_ident (40)
    en la izquierda: 34 35, en la derecha: 12 32 33 34
constante (41)
    en la izquierda: 36 37 38, en la derecha: 27


Estado 0

    0 $accept: . programa $end

    error  desplazar e ir al estado 1
    PLOT   desplazar e ir al estado 2
    IDENT  desplazar e ir al estado 3

    programa                ir al estado 4
    lista_sentencias        ir al estado 5
    sentencia               ir al estado 6
    sentencia_declar_valor  ir al estado 7
    sentencia_declar_fun    ir al estado 8
    sentencia_plot          ir al estado 9


Estado 1

    7 sentencia: error .

    $default  reduce usando la regla 7 (sentencia)


Estado 2

   12 sentencia_plot: PLOT . lista_ident

    IDENT  desplazar e ir al estado 10

    lista_ident  ir al estado 11


Estado 3

    8 sentencia_declar_valor: IDENT . DOSPTOS IDENT ASIGN expresion
   11 sentencia_declar_fun: IDENT . $@1 PAR_IZQ lista_param PAR_DER DOSPTOS IDENT $@2 ASIGN expresion

    DOSPTOS  desplazar e ir al estado 12

    $default  reduce usando la regla 9 ($@1)

    $@1  ir al estado 13


Estado 4

    0 $accept: programa . $end

    $end  desplazar e ir al estado 14


Estado 5

    1 programa: lista_sentencias .
    2 lista_sentencias: lista_sentencias . sentencia PTOCOMA

    error  desplazar e ir al estado 1
    PLOT   desplazar e ir al estado 2
    IDENT  desplazar e ir al estado 3

    $end  reduce usando la regla 1 (programa)

    sentencia               ir al estado 15
    sentencia_declar_valor  ir al estado 7
    sentencia_declar_fun    ir al estado 8
    sentencia_plot          ir al estado 9


Estado 6

    3 lista_sentencias: sentencia . PTOCOMA

    PTOCOMA  desplazar e ir al estado 16


Estado 7

    4 sentencia: sentencia_declar_valor .

    $default  reduce usando la regla 4 (sentencia)


Estado 8

    5 sentencia: sentencia_declar_fun .

    $default  reduce usando la regla 5 (sentencia)


Estado 9

    6 sentencia: sentencia_plot .

    $default  reduce usando la regla 6 (sentencia)


Estado 10

   35 lista_ident: IDENT .

    $default  reduce usando la regla 35 (lista_ident)


Estado 11

   12 sentencia_plot: PLOT lista_ident .
   34 lista_ident: lista_ident . COMA IDENT

    COMA  desplazar e ir al estado 17

    $default  reduce usando la regla 12 (sentencia_plot)


Estado 12

    8 sentencia_declar_valor: IDENT DOSPTOS . IDENT ASIGN expresion

    IDENT  desplazar e ir al estado 18


Estado 13

   11 sentencia_declar_fun: IDENT $@1 . PAR_IZQ lista_param PAR_DER DOSPTOS IDENT $@2 ASIGN expresion

    PAR_IZQ  desplazar e ir al estado 19


Estado 14

    0 $accept: programa $end .

    $default  aceptar


Estado 15

    2 lista_sentencias: lista_sentencias sentencia . PTOCOMA

    PTOCOMA  desplazar e ir al estado 20


Estado 16

    3 lista_sentencias: sentencia PTOCOMA .

    $default  reduce usando la regla 3 (lista_sentencias)


Estado 17

   34 lista_ident: lista_ident COMA . IDENT

    IDENT  desplazar e ir al estado 21


Estado 18

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT . ASIGN expresion

    ASIGN  desplazar e ir al estado 22


Estado 19

   11 sentencia_declar_fun: IDENT $@1 PAR_IZQ . lista_param PAR_DER DOSPTOS IDENT $@2 ASIGN expresion

    IDENT  desplazar e ir al estado 10

    lista_param  ir al estado 23
    lista_ident  ir al estado 24


Estado 20

    2 lista_sentencias: lista_sentencias sentencia PTOCOMA .

    $default  reduce usando la regla 2 (lista_sentencias)


Estado 21

   34 lista_ident: lista_ident COMA IDENT .

    $default  reduce usando la regla 34 (lista_ident)


Estado 22

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT ASIGN . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 34
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 23

   11 sentencia_declar_fun: IDENT $@1 PAR_IZQ lista_param . PAR_DER DOSPTOS IDENT $@2 ASIGN expresion
   32 lista_param: lista_param . COMA lista_ident DOSPTOS IDENT

    PAR_DER  desplazar e ir al estado 37
    COMA     desplazar e ir al estado 38


Estado 24

   33 lista_param: lista_ident . DOSPTOS IDENT
   34 lista_ident: lista_ident . COMA IDENT

    COMA     desplazar e ir al estado 17
    DOSPTOS  desplazar e ir al estado 39


Estado 25

   28 expresion: error .

    $default  reduce usando la regla 28 (expresion)


Estado 26

   13 expresion: PAR_IZQ . expresion PAR_DER

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 40
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 27

   14 expresion: IF . expresion THEN expresion ELSE expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 41
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 28

   26 expresion: IDENT .
   29 llamada_funcion: IDENT . PAR_IZQ lista_expresiones PAR_DER

    PAR_IZQ  desplazar e ir al estado 42

    $default  reduce usando la regla 26 (expresion)


Estado 29

   37 constante: CONST_ENTERO .

    $default  reduce usando la regla 37 (constante)


Estado 30

   36 constante: CONST_BOOL .

    $default  reduce usando la regla 36 (constante)


Estado 31

   38 constante: CONST_REAL .

    $default  reduce usando la regla 38 (constante)


Estado 32

   17 expresion: OP_MENOS . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 43
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 33

   18 expresion: OP_NEG . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 44
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 34

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT ASIGN expresion .
   15 expresion: expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion

    OP_OR      desplazar e ir al estado 45
    OP_AND     desplazar e ir al estado 46
    OP_IGUAL   desplazar e ir al estado 47
    OP_COMP    desplazar e ir al estado 48
    OP_SUMA    desplazar e ir al estado 49
    OP_MENOS   desplazar e ir al estado 50
    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52

    $default  reduce usando la regla 8 (sentencia_declar_valor)


Estado 35

   16 expresion: llamada_funcion .

    $default  reduce usando la regla 16 (expresion)


Estado 36

   27 expresion: constante .

    $default  reduce usando la regla 27 (expresion)


Estado 37

   11 sentencia_declar_fun: IDENT $@1 PAR_IZQ lista_param PAR_DER . DOSPTOS IDENT $@2 ASIGN expresion

    DOSPTOS  desplazar e ir al estado 53


Estado 38

   32 lista_param: lista_param COMA . lista_ident DOSPTOS IDENT

    IDENT  desplazar e ir al estado 10

    lista_ident  ir al estado 54


Estado 39

   33 lista_param: lista_ident DOSPTOS . IDENT

    IDENT  desplazar e ir al estado 55


Estado 40

   13 expresion: PAR_IZQ expresion . PAR_DER
   15          | expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion

    PAR_DER    desplazar e ir al estado 56
    OP_OR      desplazar e ir al estado 45
    OP_AND     desplazar e ir al estado 46
    OP_IGUAL   desplazar e ir al estado 47
    OP_COMP    desplazar e ir al estado 48
    OP_SUMA    desplazar e ir al estado 49
    OP_MENOS   desplazar e ir al estado 50
    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52


Estado 41

   14 expresion: IF expresion . THEN expresion ELSE expresion
   15          | expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion

    THEN       desplazar e ir al estado 57
    OP_OR      desplazar e ir al estado 45
    OP_AND     desplazar e ir al estado 46
    OP_IGUAL   desplazar e ir al estado 47
    OP_COMP    desplazar e ir al estado 48
    OP_SUMA    desplazar e ir al estado 49
    OP_MENOS   desplazar e ir al estado 50
    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52


Estado 42

   29 llamada_funcion: IDENT PAR_IZQ . lista_expresiones PAR_DER

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion          ir al estado 58
    llamada_funcion    ir al estado 35
    lista_expresiones  ir al estado 59
    constante          ir al estado 36


Estado 43

   15 expresion: expresion . COR_IZQ expresion COR_DER
   17          | OP_MENOS expresion .
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion

    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52

    $default  reduce usando la regla 17 (expresion)


Estado 44

   15 expresion: expresion . COR_IZQ expresion COR_DER
   18          | OP_NEG expresion .
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion

    COR_IZQ  desplazar e ir al estado 52

    $default  reduce usando la regla 18 (expresion)


Estado 45

   24 expresion: expresion OP_OR . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 60
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 46

   25 expresion: expresion OP_AND . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 61
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 47

   22 expresion: expresion OP_IGUAL . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 62
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 48

   23 expresion: expresion OP_COMP . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 63
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 49

   19 expresion: expresion OP_SUMA . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 64
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 50

   20 expresion: expresion OP_MENOS . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 65
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 51

   21 expresion: expresion OP_MULTIP . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 66
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 52

   15 expresion: expresion COR_IZQ . expresion COR_DER

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 67
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 53

   11 sentencia_declar_fun: IDENT $@1 PAR_IZQ lista_param PAR_DER DOSPTOS . IDENT $@2 ASIGN expresion

    IDENT  desplazar e ir al estado 68


Estado 54

   32 lista_param: lista_param COMA lista_ident . DOSPTOS IDENT
   34 lista_ident: lista_ident . COMA IDENT

    COMA     desplazar e ir al estado 17
    DOSPTOS  desplazar e ir al estado 69


Estado 55

   33 lista_param: lista_ident DOSPTOS IDENT .

    $default  reduce usando la regla 33 (lista_param)


Estado 56

   13 expresion: PAR_IZQ expresion PAR_DER .

    $default  reduce usando la regla 13 (expresion)


Estado 57

   14 expresion: IF expresion THEN . expresion ELSE expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 70
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 58

   15 expresion: expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion
   31 lista_expresiones: expresion .

    OP_OR      desplazar e ir al estado 45
    OP_AND     desplazar e ir al estado 46
    OP_IGUAL   desplazar e ir al estado 47
    OP_COMP    desplazar e ir al estado 48
    OP_SUMA    desplazar e ir al estado 49
    OP_MENOS   desplazar e ir al estado 50
    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52

    $default  reduce usando la regla 31 (lista_expresiones)


Estado 59

   29 llamada_funcion: IDENT PAR_IZQ lista_expresiones . PAR_DER
   30 lista_expresiones: lista_expresiones . COMA expresion

    PAR_DER  desplazar e ir al estado 71
    COMA     desplazar e ir al estado 72


Estado 60

   15 expresion: expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   24          | expresion OP_OR expresion .
   25          | expresion . OP_AND expresion

    OP_AND     desplazar e ir al estado 46
    OP_IGUAL   desplazar e ir al estado 47
    OP_COMP    desplazar e ir al estado 48
    OP_SUMA    desplazar e ir al estado 49
    OP_MENOS   desplazar e ir al estado 50
    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52

    $default  reduce usando la regla 24 (expresion)


Estado 61

   15 expresion: expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion
   25          | expresion OP_AND expresion .

    OP_IGUAL   desplazar e ir al estado 47
    OP_COMP    desplazar e ir al estado 48
    OP_SUMA    desplazar e ir al estado 49
    OP_MENOS   desplazar e ir al estado 50
    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52

    $default  reduce usando la regla 25 (expresion)


Estado 62

   15 expresion: expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   22          | expresion OP_IGUAL expresion .
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion

    OP_COMP    desplazar e ir al estado 48
    OP_SUMA    desplazar e ir al estado 49
    OP_MENOS   desplazar e ir al estado 50
    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52

    $default  reduce usando la regla 22 (expresion)


Estado 63

   15 expresion: expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   23          | expresion OP_COMP expresion .
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion

    OP_SUMA    desplazar e ir al estado 49
    OP_MENOS   desplazar e ir al estado 50
    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52

    $default  reduce usando la regla 23 (expresion)


Estado 64

   15 expresion: expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   19          | expresion OP_SUMA expresion .
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion

    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52

    $default  reduce usando la regla 19 (expresion)


Estado 65

   15 expresion: expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   20          | expresion OP_MENOS expresion .
   21          | expresion . OP_MULTIP expresion
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion

    OP_MULTIP  desplazar e ir al estado 51
    COR_IZQ    desplazar e ir al estado 52

    $default  reduce usando la regla 20 (expresion)


Estado 66

   15 expresion: expresion . COR_IZQ expresion COR_DER
   19          | expresion . OP_SUMA expresion
   20          | expresion . OP_MENOS expresion
   21          | expresion . OP_MULTIP expresion
   21          | expresion OP_MULTIP expresion .
   22          | expresion . OP_IGUAL expresion
   23          | expresion . OP_COMP expresion
   24          | expresion . OP_OR expresion
   25          | expresion . OP_AND expresion

    COR_IZQ  desplazar e ir al estado 52

    $default  reduce usando la regla 21 (expresion)


Estado 67
